# Xee-mcp

./: .gitignore  CLAUDE.md  NEXT.md  README.md  ROADMAP.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: cookies.md  release.md  upstream-issues.md
examples/: claude_code_config.md  claude_desktop_config.json
scripts/: convert_cookies.py  login_and_save.py
src/mcp_xee/: __init__.py  client.py  server.py
src/xee_mcp/: __init__.py  cli.py  client.py  hermes_tweet.py  server.py  tools.py
tests/: test_cli_init.py  test_cookies_path_tilde.py  test_error_routing.py  test_hermes_tweet.py  test_serialize.py  test_smoke.py
