[project]
name = "xee-mcp"
version = "0.1.0"
description = "Xee-mcp — MCP server for X (Twitter): search and read user timelines from Claude / ChatGPT / any MCP client. No paid API — twikit cookie auth. Naming: X + See = Xee."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ayal Nogovitsyn", email = "hello@ayal.tech" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "twitter",
    "x",
    "x-twitter",
    "claude",
    "anthropic",
    "twikit",
    "mcp-server",
    "claude-desktop",
    "claude-code",
    "ai-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.0.0",
    "twikit>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
xee-mcp = "xee_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Aiyo28/Xee-mcp"
Repository = "https://github.com/Aiyo28/Xee-mcp"
Issues = "https://github.com/Aiyo28/Xee-mcp/issues"
Funding = "https://paypal.me/aiyo28"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xee_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
